[gd_scene load_steps=9 format=2]

[ext_resource path="res://char.tscn" type="PackedScene" id=1]
[ext_resource path="res://level.gd" type="Script" id=2]
[ext_resource path="res://textures/ground.png" type="Texture" id=3]

[sub_resource type="SphereMesh" id=1]
radius = 0.025
height = 0.05

[sub_resource type="SpatialMaterial" id=2]
albedo_color = Color( 1, 0, 0, 1 )

[sub_resource type="SpatialMaterial" id=3]
albedo_color = Color( 0.956863, 0.584314, 0, 1 )

[sub_resource type="SpatialMaterial" id=4]
albedo_texture = ExtResource( 3 )
uv1_scale = Vector3( 20, 20, 10 )

[sub_resource type="SpatialMaterial" id=5]
albedo_texture = ExtResource( 3 )
uv1_scale = Vector3( 50, 50, 20 )

[node name="level" type="Spatial"]
script = ExtResource( 2 )

[node name="char" parent="." instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.470577, -4.4715 )

[node name="meshp1" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.191202, 1.02808 )
visible = false
mesh = SubResource( 1 )
material/0 = SubResource( 2 )

[node name="meshp3" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.182711, 0 )
visible = false
mesh = SubResource( 1 )
material/0 = SubResource( 2 )

[node name="meshp2" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.182711, 0 )
visible = false
mesh = SubResource( 1 )
material/0 = SubResource( 2 )

[node name="meshp4" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.182711, 0 )
visible = false
mesh = SubResource( 1 )
material/0 = SubResource( 2 )

[node name="meshp5" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.182711, 0 )
visible = false
material_override = SubResource( 3 )
mesh = SubResource( 1 )
material/0 = SubResource( 2 )

[node name="camera_pivot" type="Position3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0176735, 0.865018, 0 )

[node name="Camera" type="Camera" parent="camera_pivot"]
transform = Transform( -4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -3.0016, 0.397403, -9.12173e-07 )
current = true
size = 5.0

[node name="Camera2" type="Camera" parent="camera_pivot"]
transform = Transform( -4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -12.0845, 0.397403, -9.12173e-07 )
projection = 1
size = 3.0

[node name="camera_pivot2" type="Position3D" parent="."]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0.0176735, 0.865018, 0 )

[node name="Camera" type="Camera" parent="camera_pivot2"]
transform = Transform( -4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -3.0016, 0.397403, -9.12173e-07 )
size = 5.0

[node name="ground1" type="CSGBox" parent="."]
use_collision = true
width = 10.0
height = 0.2
depth = 10.0
material = SubResource( 4 )

[node name="ground2" type="CSGBox" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 10 )
use_collision = true
width = 10.0
height = 0.2
depth = 10.0
material = SubResource( 4 )

[node name="ground3" type="CSGBox" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 20 )
use_collision = true
width = 10.0
height = 0.2
depth = 10.0
material = SubResource( 4 )

[node name="ground4" type="CSGBox" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 30 )
use_collision = true
width = 10.0
height = 0.2
depth = 10.0
material = SubResource( 4 )

[node name="ground5" type="CSGBox" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 40 )
use_collision = true
width = 10.0
height = 0.2
depth = 10.0
material = SubResource( 4 )

[node name="ground6" type="CSGBox" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 50 )
use_collision = true
width = 10.0
height = 0.2
depth = 10.0
material = SubResource( 4 )

[node name="ground7" type="CSGBox" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 60 )
use_collision = true
width = 10.0
height = 0.2
depth = 10.0
material = SubResource( 4 )

[node name="ground8" type="CSGBox" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 70 )
use_collision = true
width = 10.0
height = 0.2
depth = 10.0
material = SubResource( 4 )

[node name="ground9" type="CSGBox" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 80 )
use_collision = true
width = 10.0
height = 0.2
depth = 10.0
material = SubResource( 4 )

[node name="ground10" type="CSGBox" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 90 )
use_collision = true
width = 10.0
height = 0.2
depth = 10.0
material = SubResource( 4 )

[node name="ramp" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.631165, 6.44977 )

[node name="ground1" type="CSGBox" parent="ramp"]
transform = Transform( 1, 0, 0, 0, 0.965926, 0.258819, 0, -0.258819, 0.965926, 0, 0, 0 )
use_collision = true
width = 5.0
height = 0.2
depth = 5.0
material = SubResource( 4 )
__meta__ = {
"_edit_lock_": true
}

[node name="ground2" type="CSGBox" parent="ramp"]
transform = Transform( 1, 0, 0, 0, 0.965926, -0.258819, 0, 0.258819, 0.965926, 0, 0, 4.776 )
use_collision = true
width = 5.0
height = 0.2
depth = 5.0
material = SubResource( 4 )
__meta__ = {
"_edit_lock_": true
}

[node name="ground11" type="CSGBox" parent="."]
transform = Transform( 0.996195, -0.0871557, 0, 0.0871557, 0.996195, 0, 0, 0, 1, 0, 0.059, 20 )
use_collision = true
width = 5.0
height = 0.2
depth = 5.0
material = SubResource( 4 )

[node name="ground12" type="CSGBox" parent="."]
transform = Transform( 0.984808, -0.173648, 0, 0.173648, 0.984808, 0, 0, 0, 1, -0.286, 0.059, 22 )
use_collision = true
width = 5.0
height = 0.2
depth = 5.0
material = SubResource( 4 )

[node name="ground13" type="CSGBox" parent="."]
transform = Transform( 0.965926, -0.258819, 0, 0.258819, 0.965926, 0, 0, 0, 1, -0.545, 0.059, 24 )
use_collision = true
width = 5.0
height = 0.2
depth = 5.0
material = SubResource( 4 )

[node name="ground14" type="CSGBox" parent="."]
transform = Transform( 0.939692, -0.34202, 0, 0.34202, 0.939692, 0, 0, 0, 1, -0.618, 0.059, 26 )
use_collision = true
width = 5.0
height = 0.2
depth = 5.0
material = SubResource( 4 )

[node name="ground15" type="CSGBox" parent="."]
transform = Transform( 0.906308, -0.422618, 0, 0.422618, 0.906308, 0, 0, 0, 1, -0.617, 0.059, 28.3 )
use_collision = true
width = 5.0
height = 0.2
depth = 5.0
material = SubResource( 4 )

[node name="CSGSphere" type="CSGSphere" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.510201, 34.4973 )
use_collision = true
radial_segments = 24
rings = 12
material = SubResource( 5 )

[node name="CSGSphere2" type="CSGSphere" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.87954, -0.30345, 35.7967 )
use_collision = true
radial_segments = 24
rings = 12
material = SubResource( 5 )

[node name="CSGSphere3" type="CSGSphere" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.537256, -0.551775, 35.7967 )
use_collision = true
radial_segments = 24
rings = 12
material = SubResource( 5 )

[node name="CSGSphere4" type="CSGSphere" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.041357, -0.410387, 36.9412 )
use_collision = true
radial_segments = 24
rings = 12
material = SubResource( 5 )

[node name="CSGSphere5" type="CSGSphere" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.28788, -0.628133, 37.9962 )
use_collision = true
radial_segments = 24
rings = 12
material = SubResource( 5 )

[node name="CSGSphere6" type="CSGSphere" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.591892, -0.716084, 38.2861 )
use_collision = true
radial_segments = 24
rings = 12
material = SubResource( 5 )

[node name="CSGSphere7" type="CSGSphere" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0933309, -0.736516, 38.739 )
use_collision = true
radial_segments = 24
rings = 12
material = SubResource( 5 )
